--- a/src/assets/scss/_theme.scss
+++ b/src/assets/scss/_theme.scss
@@ -23,6 +23,7 @@ $pantone-cannoli-cream: #f1efe2;
 $family-sans-serif: "Nunito", sans-serif;
 $primary: $pantone-classic-blue;
 $link: $pantone-provence;
+$link-hover: $pantone-cashmere-blue;
 $info: $pantone-baby-blue;
 $dark: $pantone-night-sky;
 $background: $pantone-cornhusk;
