--- a/src/assets/scss/_theme.scss
+++ b/src/assets/scss/_theme.scss
@@ -13,11 +13,13 @@ $pantone-pink-tint: #dbcbbc;
 $pantone-coconut-milk: #f0ede4;
 $pantone-pirate-black: #363837;
 // desert twlight
-$pantone-red-violet: #dbcbbc;
+$pantone-red-violet: #a35776;
 $pantone-night-sky: #2a2a34;
 // untraditional
 $pantone-opal-gray: #a49e9e;
 $pantone-cannoli-cream: #f1efe2;
+
+$pantone-jet-stream: #ede6de;
 
 // Update Bulma's global variables
 $family-sans-serif: "Nunito", sans-serif;
@@ -37,3 +39,39 @@ $control-border-width: 2px;
 $input-focus-color: transparent;
 $input-focus-border-color: transparent;
 $input-shadow: none;
+$modal-card-head-background-color: $pantone-jet-stream;
+$modal-card-body-background-color: $pantone-jet-stream;
+
+h1,
+.h1 {
+  @extend .is-size-1;
+}
+
+h2,
+.h2 {
+  @extend .is-size-2;
+}
+
+h3,
+.h3 {
+  @extend .is-size-3;
+}
+
+h4,
+.h4 {
+  @extend .is-size-4;
+}
+
+h5,
+.h5 {
+  @extend .is-size-5;
+}
+
+h6,
+.h6 {
+  @extend .is-size-6;
+}
+
+.h7 {
+  @extend .is-size-7;
+}
