--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -33,72 +33,6 @@ h6,
   @extend .is-size-7;
 }
 
-/* toast */
-.toast {
-  width: 50%;
-  z-index: 99999;
-  position: fixed;
-  pointer-events: none;
-  display: flex;
-  flex-direction: column;
-  padding: 15px;
-}
-
-.toast-close-button {
-  position: absolute;
-  right: 0;
-  top: 5px;
-}
-
-.toast-success {
-  @extend .has-background-success;
-}
-
-.toast-warning {
-  @extend .has-background-warning;
-}
-
-.toast-danger {
-  @extend .has-background-danger;
-}
-
-.toast-info {
-  @extend .has-background-info;
-}
-
-.toast-top-center {
-  top: 0;
-  right: 0;
-  width: 100%;
-}
-.toast-bottom-center {
-  bottom: 0;
-  right: 0;
-  width: 100%;
-}
-.toast-top-full-width {
-  top: 0;
-  right: 0;
-  width: 100%;
-}
-.toast-bottom-full-width {
-  bottom: 0;
-  right: 0;
-  width: 100%;
-}
-.toast-top-left {
-  top: 12px;
-  left: 12px;
-}
-.toast-top-right {
-  top: 12px;
-  right: 12px;
-}
-.toast-bottom-right {
-  right: 12px;
-  bottom: 12px;
-}
-.toast-bottom-left {
-  bottom: 12px;
-  left: 12px;
+.login-page {
+  margin: 100px 0;
 }
