--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,6 +1,7 @@
 @charset "utf-8";
 @import "./_fonts.scss";
 @import "./_theme.scss";
+@import "./_toast.scss";
 @import "./_custom.scss";
 
 @import "~bulma/bulma.sass";
