--- a/src/assets/scss/_theme.scss
+++ b/src/assets/scss/_theme.scss
@@ -33,11 +33,11 @@ $pantone-jet-stream: #ede6de;
 
 // Update Bulma's global variables
 $family-sans-serif: "Nunito", sans-serif;
+$background: $pantone-monument;
 $primary: $pantone-classic-blue;
 $link: $pantone-classic-blue;
 $info: $pantone-cashmere-blue;
 $dark: $pantone-night-sky;
-$background: $pantone-cornhusk;
 $grey-dark: $pantone-pirate-black;
 $grey-light: $pantone-opal-gray;
 $white: $pantone-coconut-milk;
