--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,6 +3,10 @@
 @import "./_theme.scss";
 
 @import "~bulma/bulma.sass";
+@import "~bulma-calendar/src/sass/index.sass";
+@import "~bulma-checkradio/src/sass/index.sass";
+@import "~bulma-switch/src/sass/index.sass";
+@import "~bulma-tooltip/src/sass/index.sass";
 
 @import "./_toast.scss";
 @import "./_custom.scss";
