--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -7,6 +7,7 @@
 @import "~bulma-checkradio/src/sass/index.sass";
 @import "~bulma-switch/src/sass/index.sass";
 @import "~bulma-tooltip/src/sass/index.sass";
+@import "~@creativebulma/bulma-collapsible";
 
 @import "./_toast.scss";
 @import "./_custom.scss";
