--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,7 +2,7 @@
 @import "./_fonts.scss";
 @import "./_theme.scss";
 
-@import "~bulma/bulma.sass";
+@import "~bulma/bulma";
 @import "~bulma-calendar/src/sass/index.sass";
 @import "~bulma-checkradio/src/sass/index.sass";
 @import "~bulma-switch/src/sass/index.sass";
