--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,13 +2,12 @@
 @import "./_fonts.scss";
 @import "./_theme.scss";
 
-@import "~bulma/bulma";
+@import "~bulma/bulma.sass";
 @import "~bulma-calendar/src/sass/index.sass";
 @import "~bulma-checkradio/src/sass/index.sass";
 @import "~bulma-switch/src/sass/index.sass";
 @import "~bulma-tooltip/src/sass/index.sass";
 @import "~bulma-tagsfield/src/tagsfield.scss";
-@import "~@creativebulma/bulma-collapsible/";
 
 @import "./_toast.scss";
 @import "./_custom.scss";
