--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -143,3 +143,12 @@ footer {
   display: table-cell;
   padding: 3px 0px;
 }
+
+.confirm-modal-content {
+  padding: 10px 30px;
+  z-index: 1;
+}
+
+.confirm-modal-footer {
+  margin: 30px 0px 10px 0px;
+}
