--- a/src/assets/scss/_theme.scss
+++ b/src/assets/scss/_theme.scss
@@ -51,3 +51,4 @@ $control-border-width: 2px;
 $input-shadow: none;
 $modal-card-head-background-color: $pantone-jet-stream;
 $modal-card-body-background-color: $pantone-jet-stream;
+$pageloader-opacity: 0.5;
