--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -9,6 +9,7 @@
 @import "~bulma-tooltip/src/sass/index.sass";
 @import "~bulma-tagsfield/src/tagsfield.scss";
 @import "~@creativebulma/bulma-collapsible/src/sass/index.sass";
+@import "~bulma-pageloader/src/sass/index.sass";
 
 @import "./_toast.scss";
 @import "./_custom.scss";
