--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -152,3 +152,7 @@ footer {
 .confirm-modal-footer {
   margin: 30px 0px 10px 0px;
 }
+
+select option[selected][disabled]:first-child {
+  color: grey;
+}
