--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -45,6 +45,11 @@ i {
   display: flex;
 }
 
+.login-page .button {
+  // -webkit-box-pack: center;
+  justify-content: center;
+}
+
 .main-content {
   margin-top: 20px;
 }
