--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -167,3 +167,7 @@ select option[selected][disabled]:first-child {
   margin: 0 auto;
   margin-bottom: 10px;
 }
+
+.pagination > a.disabled {
+  pointer-events: none;
+}
