--- a/src/assets/scss/_theme.scss
+++ b/src/assets/scss/_theme.scss
@@ -31,11 +31,13 @@ $pantone-cannoli-cream: #f1efe2;
 
 $pantone-jet-stream: #ede6de;
 
+$pantone-blue-depths:#263056;
+
 // Update Bulma's global variables
 $family-sans-serif: "Nunito", sans-serif;
 $background: $pantone-monument;
 $primary: $pantone-classic-blue;
-$link: $pantone-classic-blue;
+$link: $pantone-blue-depths;
 $info: $pantone-cashmere-blue;
 $dark: $pantone-night-sky;
 $grey-dark: $pantone-pirate-black;
