--- a/src/assets/scss/_styleGuide.scss
+++ b/src/assets/scss/_styleGuide.scss
@@ -6,15 +6,21 @@
       border-radius: 2px;
       box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.1), inset 0 0 0 1px rgba(0, 0, 0, 0.1);
       display: inline-block;
-      height: 130px;
+      height: 140px;
       width: 100px;
       .card-content {
-        height: 90px;
-        padding: 0;
+        height: 105px;
+        padding: 45px 20px 50px 20px;
+        span{
+          font-size: 0.75rem;
+          color: white;
+        }
       }
       .card-footer {
-        padding: 0 3px;
-        height: 40px;
+        padding: 0 2px;
+        height: 35px;
+        background-color: white;
+        font-weight: 600;
       }
     }
   }
