--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -194,3 +194,77 @@ select option[selected][disabled]:first-child {
 .tab-content.is-active {
   display: block;
 }
+
+.snip {
+  font-family: "Open Sans", Arial, sans-serif;
+  position: relative;
+  margin: 10px;
+  min-width: 230px;
+  text-align: center;
+  line-height: 1.4em;
+  font-size: 14px;
+  box-shadow: none !important;
+}
+
+.snip * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.snip .item-image {
+  display: inline-block;
+  width: 80%;
+  z-index: 1;
+  position: relative;
+  padding: 10px;
+}
+
+.snip .item-image img {
+  max-width: 100%;
+  vertical-align: top;
+  border: 2px solid $pantone-blue-depths;
+  padding: 5px;
+  background-color: $white;
+}
+
+.snip figcaption {
+  width: 100%;
+  border: 2px solid $pantone-blue-depths;
+  padding: 125px 25px 25px;
+  margin-top: -100px;
+  display: inline-block;
+}
+
+.snip .field {
+  label {
+    text-align: left;
+  }
+  span {
+    display: table;
+    padding: 10px;
+  }
+}
+
+.snip img {
+  object-fit: cover;
+  width: 260px;
+  height: 260px;
+}
+
+.snip .file {
+  position: relative;
+  left: 60px;
+  bottom: 60px;
+  z-index: 1;
+}
+
+.datetimepicker-dummy .datetimepicker-dummy-wrapper .datetimepicker-dummy-input {
+  max-width: 10%;
+}
+
+.datetimepicker-dummy-wrapper {
+  background-color: #f0ede4;
+  border-radius: 4px;
+  color: #363636;
+  border: 2px solid #dbdbdb !important;
+}
