--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -258,13 +258,13 @@ select option[selected][disabled]:first-child {
   z-index: 1;
 }
 
-.datetimepicker-dummy .datetimepicker-dummy-wrapper .datetimepicker-dummy-input {
-  max-width: 10%;
-}
+// .datetimepicker-dummy .datetimepicker-dummy-wrapper .datetimepicker-dummy-input {
+//   max-width: 10%;
+// }
 
-.datetimepicker-dummy-wrapper {
-  background-color: #f0ede4;
-  border-radius: 4px;
-  color: #363636;
-  border: 2px solid #dbdbdb !important;
-}
+// .datetimepicker-dummy-wrapper {
+//   background-color: #f0ede4;
+//   border-radius: 4px;
+//   color: #363636;
+//   border: 2px solid #dbdbdb !important;
+// }
