--- a/src/assets/scss/_theme.scss
+++ b/src/assets/scss/_theme.scss
@@ -53,3 +53,5 @@ $input-shadow: none;
 $modal-card-head-background-color: $pantone-jet-stream;
 $modal-card-body-background-color: $pantone-jet-stream;
 $pageloader-opacity: 0.5;
+
+$dark-brown-color: darken($pantone-stucco, 15%);
