--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -1,15 +1,3 @@
-.is-dark-brown {
-  background-color: $dark-brown-color;
-  border-color: transparent;
-  color: white;
-}
-
-.is-dark-brown.is-outlined {
-  background-color: transparent;
-  border-color: $dark-brown-color;
-  color: $dark-brown-color;
-}
-
 /* title header size */
 h1,
 .h1 {
@@ -46,6 +34,21 @@ h6,
 }
 
 /* other class */
+.is-secondary {
+  background-color: $dark-brown-color;
+  border-color: transparent;
+  color: white;
+}
+
+.is-secondary.is-outlined {
+  background-color: transparent;
+  border-color: $dark-brown-color;
+  color: $dark-brown-color;
+}
+
+.is-item-centered {
+  margin: auto;
+}
 
 i {
   margin-right: 6px;
@@ -92,6 +95,11 @@ footer {
   width: 100%;
   @extend .is-size-7;
   @extend .has-text-centered;
+}
+
+.brand-text {
+  color: transparent !important;
+  -webkit-text-stroke: 1px $pantone-stucco;
 }
 
 .navbar > .container.nav-header {
