--- a/src/assets/scss/_theme.scss
+++ b/src/assets/scss/_theme.scss
@@ -55,3 +55,4 @@ $modal-card-body-background-color: $pantone-jet-stream;
 $pageloader-opacity: 0.5;
 
 $dark-brown-color: darken($pantone-stucco, 15%);
+$light-brown-color: lighten($pantone-stucco, 15%);
