--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -126,9 +126,8 @@ footer {
 }
 
 .brand-text {
-  color: $pantone-stucco !important;
-  // color: transparent !important;
-  -webkit-text-stroke: 0.5px $white;
+  color: transparent !important;
+  -webkit-text-stroke: 1.5px $white;
 }
 
 .navbar > .container.nav-header {
@@ -325,6 +324,7 @@ select option[selected][disabled]:first-child {
     text-align: center;
     align-items: center;
     justify-content: center;
+    color: $grey-light;
     .card-footer {
       display: block !important;
       border-top: 1px solid #888;
@@ -333,6 +333,9 @@ select option[selected][disabled]:first-child {
         margin-right: 10px;
         margin-bottom: 5px;
       }
+    }
+    .item-title {
+      color: $dark;
     }
   }
 }
